samples/_failures_safe/1761363086_6579a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41ad7194.c: In function ‘main’:
./samples/SAFE/__tmp_41ad7194.c:147:16: error: missing terminating " character
  147 |         printf("No valid log entries
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_41ad7194.c:147:9: error: expected expression at end of input
  147 |         printf("No valid log entries
      |         ^~~~~~
./samples/SAFE/__tmp_41ad7194.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41ad7194.c:147:9: error: expected declaration or statement at end of input
